src/scripts/components/toolbar/status-containers/status-container.scss
.status-container {
  align-items: flex-end;
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  flex-shrink: 0;

  &::before {
    color: #1768C4;
    margin-right: 0.5rem;
  }

  .display-none {
    display: none;
  }

  .status-container-values {
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    font-weight: bold;
    justify-content: center;

    span.value, span.max-value {
      color: #1768C4;
    }

    span.delimiter {
      text-align: center;
      width: 1rem;
    }
  }
}

